src/test/ui/issues/issue-46983.stderr
error: lifetime may not live long enough
  --> $DIR/issue-46983.rs:2:5
   |
LL | fn foo(x: &u32) -> &'static u32 {
   |           - let's call the lifetime of this reference `'1`
LL |     &*x
   |     ^^^ returning this value requires that `'1` must outlive `'static`

error: aborting due to previous error

